# captif-slp

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.sh  publish.md  pyproject.toml
.github/workflows/: python-publish.yml
captif_slp/: __init__.py  process.py  signal.py  slp.py
tests/: conftest.py  test_process.py  test_process_cpx.py  test_reference_profiles.py  test_signal.py  test_slp.py  test_structures.py  test_version.py
tests/data/transverse_profiles/: 20231114_cpx_demo.csv
