[tool.poetry]
name = "captif-slp"
version = "0.1"
description = ""
authors = ["John Bull"]
homepage = "https://github.com/captif-nz/captif-slp"
license = "MIT"
readme = "README.md"
keywords = ["CAPTIF"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
captif-data-structures = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
